--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,10 @@ body {
   font-size: 2rem;
   color: blue;
 }
+.location-icon-volcano {
+  font-size: 2rem;
+  color: green;
+}
 
 .loader {
   display: flex;
