--- a/src/index.css
+++ b/src/index.css
@@ -78,3 +78,35 @@ body {
 .location-info li {
   padding: 5px 0;
 }
+
+.viewToggleBox {
+  width: 200px;
+  height: 400px;
+  z-index: 100;
+  position: absolute;
+  top: 100px;
+  left: 50px;
+  display: flex;
+  flex-direction: column;
+}
+
+.check-icons {
+  font-size: 2rem;
+  padding-right: 5px;
+  margin-left: 5px;
+}
+
+.check-icons:hover {
+  cursor: pointer;
+}
+
+.toggle {
+  display: flex;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.6);
+  margin: 5px 0;
+  border-radius: 10px;
+  color: #fff;
+  width: 100%;
+  font-size: 12px;
+}
